--- a/static/style.css
+++ b/static/style.css
@@ -17,12 +17,14 @@ input {
     padding: 15px 25px;
     border: 5px solid white;
     border-radius: 25px;
-    background-color: #1e1f22;
+    background-color: #313244;
     cursor: thick solid #fff;
 }
 
 .container {
-    background-color: #1e1f22;
+/*    background-color: #1e1f22; */
+/*    background-color: #313244; */
+    background-color: #11111b; 
     color: white;
     display: flex;
     justify-content: center;
@@ -41,4 +43,35 @@ input {
 
 #banner {
     color: green;
+}
+
+#popup {
+    display: block;
+}
+
+.hidden {
+    display: none; 
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #181825;
+    color: #fff;
+    padding: 50px;
+    text-align: center;
+    z-index: 9999;
+    border-radius: 25px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2), 0px 4px 8px rgba(0, 0, 0, 0.2), 0px 4px 8px rgba(0, 0, 0, 0.2), 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#blue {
+    color: #87afff;
+}
+
+#green {
+    color: #87d7d7;
+}
+
+#yellow {
+    color: #ffd7af;
 }
